# account_service/docs/swagger.json
@@ -31,60 +31,6 @@
                 }
             }
         },
-        "/players": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Returns list of players",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "player"
-                ],
-                "summary": "Player GetList",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Page skip (default: 0)",
-                        "name": "pageSkip",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Page size (default: 10)",
-                        "name": "pageSize",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Player"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/registerOrLogin": {
             "post": {
                 "description": "Register a new account if not exist, otherwise login",
@@ -151,26 +97,6 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                },
-                "playerId": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.Player": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
                     "type": "string"
                 },
                 "playerId": {
