# player_service/model/player_model.go
@@ -1,13 +1,0 @@
-package model
-
-import "go.mongodb.org/mongo-driver/bson/primitive"
-
-const CollectionPlayer = "players"
-
-type Player struct {
-    ID       primitive.ObjectID `bson:"_id"`
-    PlayerId string             `bson:"playerId"`
-    Name     string             `bson:"name"`
-    Email    string             `bson:"email"`
-    Password string             `bson:"password"`
-}
